--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+---
+layout: index
+title: The Labcast -- Conversations from the front lines of science and technology research.
+---
+
 <html>
   <body>
     test
